Revisi tombol kali

--- a/index.html
+++ b/index.html
@@ -23,28 +23,28 @@
                     <td class="tombol">7</td>
                     <td class="tombol">8</td>
                     <td class="tombol">9</td>
-                    <td class="tombol">x</td>
+                    <td class="tombol operator">x</td>
                 </tr>
 
                 <tr>
                     <td class="tombol">4</td>
                     <td class="tombol">5</td>
                     <td class="tombol">6</td>
-                    <td class="tombol">/</td>
+                    <td class="tombol operator">/</td>
                 </tr>
 
                 <tr>
                     <td class="tombol">1</td>
                     <td class="tombol">2</td>
                     <td class="tombol">3</td>
-                    <td class="tombol">+</td>
+                    <td class="tombol operator">+</td>
                 </tr>
 
                 <tr>
-                    <td class="tombol" id="reset">c</td>
+                    <td class="tombol samaDengan" id="reset">c</td>
                     <td class="tombol">0</td>
-                    <td class="tombol" id="samaDengan">=</td>
-                    <td class="tombol">-</td>
+                    <td class="tombol samaDengan">=</td>
+                    <td class="tombol operator">-</td>
                 </tr>
         </tbody>
         </table>
